<?xml version="1.0"?>
<package format="2">
  <name>turtlebot_loadout_kha1</name>
  <version>0.1.0</version>
  <description>
    Enables the TurtleBot mobile robot KHA1 hardware loadout
  </description>
  <maintainer email="code@hxr.io">HXR</maintainer>
  <license>MIT</license>
  <license>Apache</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
